--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
   "installCommand": "npm install",
   "functions": {
     "app/api/**/*.ts": {
-      "runtime": "nodejs18.x"
+      "runtime": "nodejs@18.x"
     }
   }
 }
